LightMP3 Changelog
------------------

Version 2.0.0 RC3
-----------------
-Added: support for WMA (Windows Media Audio).
        Many thanks to cooleyes and hrimfaxi for the sample
-Fixed: standardized the fast forward/rewind speed for the different codecs (kurian2z5)
-Added: "Sleep Timer" feature (kurian2z5)


Version 2.0.0 RC2
-----------------
-Added: Bookmark function (for audiobook): press L+Circle while listening to a track.
        There's a new option in the settings file.
        SHUTDOWN_AFTER_BOOKMARK=0
        The default is 0, if set to 1 the psp will shut down after creating a bookmark.
        The next time you'll start LightMP3 will ask you if you want to load the saved bookmark.
-Fixed: Korean language support.
-Fixed: shuffle (always the same number were generated in RC1)
-Fixed: Added sql transaction to playPlaylist (faster change of track)
-Fixed: Bug in ID3v2.2 parsing
-Fixed: Bug in scrobbler log (time saved to file was the end of the track)


Version 2.0.0 RC1
-----------------
-Added: You can sort records in the Media Library (press TRIANGLE)
-Added: support for filename with foreign characters (àèìòù...)
        Many thanks to cooleyes for the FAT driver
-Added: cpu clock set to minimum value when music is paused
-Added: French, German, Polish, Spanish language
-Added: Smoother progress bar
-Added: Icons for folder/music in file browser and media library
-Added: New ICON0.PNG and PIC1.PNG (many thanks to dario1crisafulli)
-Added: Display will turn off when HOLD is set to ON, and will turn on when HOLD is set to off
-Added: In Media Library when you select an artist you see an album's list (not a song list)
-Added: You can add a playlist to the current one by pressing start in the file browser (or square on the directory containing the playlist)
-Added: Option to change the media library root dir (look at the file "settings", this option doesen't appear in the settings tab)