@@ -226,3 +226,5 @@ SLEEP_MODE_3=0:30 Hour
 SLEEP_MODE_4=1:00 Hour
 SLEEP_MODE_5=1:30 Hours
 SLEEP_MODE_6=2:00 Hours
+
+SETTINGS_18=Display Off on Hold
