@@ -5,8 +5,11 @@ Version 2.0.0 RC3
 -----------------
 -Added: support for WMA (Windows Media Audio).
         Many thanks to cooleyes and hrimfaxi for the sample
--Fixed: standardized the fast forward/rewind speed for the different codecs (kurian2z5)
 -Added: "Sleep Timer" feature (kurian2z5)
+-Fixed: standardized the fast forward/rewind speed for the different codecs (kurian2z5)
+-Fixed: Conflict with Hold+ (kurian2z5)
+        Added a setting to disable the "display off on hold".
+        If you use Hold+ please disable this in LightMP3.
 
 
 Version 2.0.0 RC2
